# molecule-backend

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  config.yaml.example  main.py  pyproject.toml
.github/: pull_request_template.md
alembic/: env.py
alembic/versions/: 1e69e810a774_changed_bot_settings.py  3de493b66730_changed_atrribute_name_for_models_.py  96707e2c88b3_renamed_press_preview_photo_and_added_.py  9f8e542bcbf7_init_db.py  a8d9284085eb_renamed_press_preview_photo_and_changed_.py
app/common/: crud.py
app/database/: models.py  settings.py
app/routers/common/: crud.py  files.py
app/routers/media/: api.py  crud.py
app/routers/news/: api.py
app/routers/press/: api.py
app/routers/projects/: api.py  crud.py
app/routers/we/: api.py  crud.py
app/schemas/: __init__.py  dates.py  electrons.py  media.py  news.py  press.py  projects.py
app/tests/: conftest.py  test_press.py
database/: models.py
