[tool.poetry]
name = "molecule-backend"
version = "0.1.0"
description = ""
authors = ["Artem Shashov <tauquantum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.4.2"
pydantic-settings = "2.0.3"
pydantic-settings-yaml = "0.2.0"
fastapi = "0.104.0"
sqlalchemy = "2.0.22"
asyncpg = "0.28.0"
pyyaml = "6.0.1"
uvicorn = "0.23.2"
greenlet = "3.0.1"
alembic = "1.12.1"
psycopg2-binary = "2.9.9"
python-multipart = "0.0.6"


[tool.poetry.group.dev.dependencies]
black = "23.10.1"
flake8 = "6.1.0"
aiofiles = "23.2.1"
pytest = "7.4.3"
pytest-asyncio = "0.23.2"
httpx = "0.25.2"
aiosqlite = "0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app/routers"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]