[tool.poetry]
name = "molecule-backend"
version = "0.1.0"
description = ""
authors = ["Artem Shashov <tauquantum@gmail.com>", "Nikolai Povarov <nd.povarov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
pydantic = "2.4.2"
pydantic-settings = "2.0.3"
pydantic-settings-yaml = "0.2.0"
fastapi = "0.104.0"
sqlalchemy = "2.0.22"
asyncpg = "0.28.0"
pyyaml = "6.0.1"
uvicorn = "0.23.2"
greenlet = "3.0.1"
alembic = "1.12.1"
psycopg2 = [
    { version = "2.9.9", platform = "darwin" },
    { version = "2.9.9", platform = "windows" }
]
psycopg2-binary = [
    { version = "2.9.9", platform = "linux" },
]
python-multipart = "0.0.6"


[tool.poetry.group.dev.dependencies]
black = "23.10.1"
flake8 = "6.1.0"
aiofiles = "23.2.1"
pre-commit = "3.6.0"
isort = "5.13.2"
pylint = "3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 109
skip-string-normalization = 1
check = 1
diff = 1

[tool.isort]
profile = "black"
no_lines_before = ["LOCALFOLDER"]
skip = [".gitignore", ".dockerignore"]
line_length = 109

[tool.pylint.format]
max-line-length = 109

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "import-error",
    "wrong-import-order",
    "unused-argument",
    "duplicate-code",
    "too-many-locals",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-ancestors",
    "too-many-public-methods",
    "too-many-branches",
    "fixme",
    "logging-format-interpolation",
]

[tool.flake8]
max-line-length = 109
